resolves 18 color-contrast accessibility issues
should be checked for visual asthetic; while the colors were lightened
or darkened just enough to pass WCAG 2.0 AA conformance requirements,
they may no longer be visually appealing to the site designer.

--- a/source/stylesheets/_footer.scss
+++ b/source/stylesheets/_footer.scss
@@ -68,7 +68,7 @@
 }
 
 .footer .footer-info {
-  color: #999;
+  color: #555;
   // font-size: 0.75rem;
   font-size: 11px;
   line-height: 24px;
@@ -89,11 +89,11 @@
 }
 
 .footer .footer-info a {
-  color: #dd6a58
+  color: #C0260B
 }
 
 .footer .footer-statement {
-  color: #999;
+  color: #666;
   flex: 1;
   font-size: 1.1rem;
   margin: 1rem 0;
