--- a/source/stylesheets/site.css.scss
+++ b/source/stylesheets/site.css.scss
@@ -45,12 +45,12 @@ body {
 /* Typography */
 
 a {
-  color: #f23818;
+  color: #DC2C0D;
   text-decoration: none;
 }
 
 a:hover {
-  border-bottom: 1px dotted #f23818;
+  border-bottom: 1px dotted #DC2C0D;
 }
 
 em {
